--- a/src/ui1.css
+++ b/src/ui1.css
@@ -31,10 +31,50 @@
     background-color: slategrey;
     margin: 50px;
     padding: 10px 25px;
-    color: beige;
+    color: white;
     font-style: italic;
     text-Decoration: none;
     font-size: 20px;
     border-radius: 5px;
     cursor: pointer;
+}
+.game-content{
+    display: flex;
+    flex-direction: column;
+    margin: 30px;
+    padding: 10px;
+}
+.instruction
+{
+    font-size: 25px;
+    color:gray;
+}
+.number{
+font-size: 30px;
+color: rgb(229, 0, 0);
+}
+.guess-area
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+background-color: #d4d4d4;
+margin: 10px;
+padding: 20px;
+font-size: 20px;
+}
+#guess
+{
+    border: none;
+    margin: 20px;
+    padding: 10px;
+    width: 30%;
+    height: auto;
+}
+
+.guessednum-title
+{
+    font-size: 20px;
+    color: rgb(109, 107, 107);
+
 }
